Fix code whitespace in VS Code demo, update repo links

--- a/website/styles.css
+++ b/website/styles.css
@@ -704,6 +704,7 @@ a {
     display: flex;
     padding: 0 16px;
     min-height: 24px;
+    white-space: pre;
 }
 
 .code-line.active-line {
